# fugu

./: README.md
configs/: bundle.sh
configs/formats/legacy/: format.sh
configs/formats/modern/: format.sh
configs/injects/: model_providers.sakana.toml
demos/autoresearch/: README.md
demos/gpu-mode/: README.md
demos/humanoid_control/: .gitignore  README.md
demos/rubik/: README.md  build_eval_set.py  cube.py  eval_cubes.json  prompt.txt  rerun_saved.py  rubik_compare.py  solver_runner.py
demos/rubik/results/: fable5_300.json  fable5_raw.txt  fugu_300.json  fugu_solver.py  fugu_ultra_300.json  fugu_ultra_raw.txt  gemini_300.json  gemini_raw.txt  gemini_solver.py  gpt55_300.json  gpt55_raw.txt  opus48_300.json  opus48_raw.txt
demos/sokoban/: README.md  actions.py  env.py  main.py  pyproject.toml  renderer.py
demos/text-to-cad/: .env.example  .gitignore  README.md  model_runner.py  models.toml  prompt.txt  render_compare.py  rerun_saved.py  run_codex.py  setup.sh
demos/typhoon/: .gitignore  README.md  prompt.md
demos/typhoon/comparison/: sal.py  (+4 more)
demos/users_demo/: README.md  pyproject.toml
demos/users_demo/harness/: collect.py  monitor.py  monitor_daemon.sh  openrouter_catalog.json  or_proxy.py  proxy_keeper.sh  run_codex.sh  run_demo.sh  run_sweep.sh
demos/users_demo/prompts/: demo1_subway.txt  demo2_rocketleague.txt  demo3_traderdesk.txt  demo4_terrain.txt  demo5_crossy_road.txt  demo6_rube_goldberg.txt
docs/: commands_details.md
notes/: 0001-api-key-in-codex-env.md  0002-session-index-and-version-switches.md
scripts/: codex-fugu  install.sh
(+45 files in other folders)
