[project]
name = "fugu-sokoban"
version = "0.1.0"
description = "Sokoban planning demo for Sakana Fugu"
readme = "README.md"
authors = [
    { name = "Ciaran", email = "ciaranregan123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.2",
    "jumanji>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
