[project]
name = "fugu-repro-harness"
version = "0.1.0"
description = "Environment for the Fugu demo reproduction harness. The only Python dependency is the OpenRouter reasoning-strip proxy (harness/or_proxy.py); the scrapers monitor.py and collect.py are stdlib-only."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[tool.uv]
package = false
